--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,10 +1,10 @@
 <form accept-charset="UTF-8" action="/users" method="post">
   <label for="username">Username</label>
-  <input id="username" type="text" name="username" value="<%=@user.username%>"/>
+  <input id="username" type="text" name="[user][username]" value="<%=@user.username%>"/>
   <label for="email">Email</label>
-  <input type="email" name="email" value="<%=@user.email%>"/>
+  <input type="email" name="[user][email]" value="<%=@user.email%>"/>
   <label for="password">Password</label>
-  <input type="password" name="password" value="<%=@user.password%>"/>
+  <input type="password" name="[user][password]" value="<%=@user.password%>"/>
   <input type="submit" />
   <input type="hidden" name="authenticity_token" value="<%=form_authenticity_token%>">
 </form>
