--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<!-- <form accept-charset="UTF-8" action="/users" method="post">
+<form accept-charset="UTF-8" action="/users" method="post">
   <label for="username">Username</label>
   <input id="username" type="text" name="[user][username]" value="<%=@user.username%>"/>
   <label for="email">Email</label>
@@ -7,22 +7,45 @@
   <input type="password" name="[user][password]" value="<%=@user.password%>"/>
   <input type="submit" />
   <input type="hidden" name="authenticity_token" value="<%=form_authenticity_token%>">
-</form> -->
+</form>
 
 
 <hr>
 
 <%= form_tag("/users", :method => "post") do %>
   <%= label_tag(:username, "Username") %>
-  <%= text_field(:user, :username) %>
+  <%= text_field_tag(:username, value=@user.username) %>
 
   <%= label_tag(:email, "Email") %>
-  <%= email_field_tag("user[email]") %>
+  <%= email_field_tag(:email, value=@user.email) %>
 
   <%= label_tag(:password, "Password") %>
-  <%= password_field(:user, :password) %>
-
-  <%= time_field(:task, :started_at) %>
+  <%= password_field_tag(:password, value=@user.password) %>
 
   <%= submit_tag("Submit") %>
 <% end %>
+
+
+<hr>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
