--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -28,7 +28,15 @@
 
 <hr>
 
-
+<%= form_for @user do |f| %>
+  <%= f.label :username, "Your name here" %>
+  <%= f.text_field :username %>
+  <%= f.label :email, "Your email" %>
+  <%= f.email_field :email, :placeholder => "example@example.com" %>
+  <%= f.label :password, "Your password" %>
+  <%= f.password_field :password %>
+  <%= f.submit "Submit" %>
+<% end %>
 
 
 
